2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Generate the dav_user_2.2.conf
	file so the location of the dav_groupfile is the
	one used in the installation
	* data/dav_user_2.2.conf: Rename to...
	* data/dav_user_2.2.conf.in: ... this

2008-03-08  Jaap Haitsma  <jaap@haitsma.org>

	* configure.in:
	* data/Makefile.am:
	* src/file-share-properties.c: (flush_password), (update_ui),
	(main):
	Move from libglade to gtkbuilder. Fixes bug #519634

2008-03-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Fix more stupidness

2008-03-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Fix dav configuration linking, again

2008-03-02  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Patch from Baptiste Mille-Mathias
	<bmm80@free.fr> to install the autostart desktop file
	in the right directory (Closes: #519806)

2008-02-29  Jaap Haitsma  <jaap@haitsma.org>

	* Makefile.am: Remove gnome-user-share.spec

2008-02-29  Jaap Haitsma  <jaap@haitsma.org>

	* README: Add to readme that also Avahi can be used

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-user-share.spec: Remove, it's outdated

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Fix installation of the dav_user.conf
	file

2008-02-29  Michael Monreal  <mmonreal@svn.gnome.org>

	* data/file-share-properties.glade: use new icon
	* data/gnome-user-share-properties.desktop.in: use new icon

	Use folder-remote instead of the deprecated apacheconf icon for 
	now. If someone can come up with a nicer metaphor, we can do a 
	new icon for gnome-user-share. Fixes bug #519116.

2008-02-27  Jaap Haitsma  <jaap@haitsma.org>

	* .cvsignore: Remove

2008-02-27  Jaap Haitsma  <jaap@haitsma.org>

	Major restructuring of directory structure. Fixes bug #518472
	Use po/LINGUAS for translations

=== gnome-user-share 0.22 ===

2008-02-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.22
	* Makefile.am: Fix distcheck